# Torvix-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 228009274123_create_users_table.py  7a8d6e1c92bf_create_meal_statistics_tables.py  8ed37e2dc3d2_create_auth_sessions_table.py  c6e4e7c09ad1_add_gender_to_users.py  f2b7a9d14d32_add_activity_level_to_users.py
app/: main.py
app/api/routes/: auth.py  food_database.py  open_food_facts.py  openai.py  stats.py
app/core/: camel.py  config.py  security.py
app/db/: init_db.py
app/models/: auth_session.py  base.py  statistics.py  user.py
app/schemas/: camel_model.py  food_database.py  open_food_facts.py  openai.py  statistics.py  user.py
tests/: test_open_food_facts_route.py  test_openai_route.py  test_stats_route.py
